--- a/prep/bd/spp/v2020/1_get_iucn_spp.Rmd
+++ b/prep/bd/spp/v2020/1_get_iucn_spp.Rmd
@@ -31,6 +31,7 @@ library(raster)
 library(rfishbase)
 library(rredlist)
 library(taxize)
+library(rentrez) # to use the api key for searching the NCBI database
 library(here)
 
 # Source and set file paths
@@ -152,7 +153,7 @@ for(i in 1:length(scinames)){
   sp <- scinames[i]
   print(i)
 
-  comm <- rredlist::rl_search(sp, key = api_key )$result$main_common_name
+  comm <- rredlist::rl_search(sp, key = api_key)$result$main_common_name
   
   df <- data.frame(sciname = sp,
                    common = comm)
@@ -172,7 +173,6 @@ miss_sp <- iucn_common_names %>%
 ```
 
 We are still missing `r nrow(filter(iucn_common_names, is.na(common)))`. Check fishbase
-
 
 ```{r fishbase, eval = F}
 
@@ -197,8 +197,8 @@ This got us `r nrow(filter(fb_list, !is.na(FBname)))` more common names we need 
 # add back in common names
 out <- iucn_common_names %>%
   left_join(fb_list, by = c("sciname" = "Species")) %>%
-  mutate(common = ifelse(is.na(common), FBname, common)) %>%
-  select(-FBname)
+  mutate(common_fb = ifelse(is.na(common), FBname, common)) %>%
+  select(-FBname, -common)
 ```
 
 Use the `taxize` R package to try and get more of the missing common names
@@ -227,9 +227,34 @@ df2 <- df %>%
   rename(common = X..i..) %>%
   filter(!is.na(common)) %>%
   mutate(sciname = str_extract(sciname, "[^.]+")) # remove numbers
+
+## Try using the NCBI in taxize
+uids <- get_uid(missing_scinames)
+
+# combine uids with sciname 
+uids_found <- data.frame(sciname = missing_scinames, uid = uids)
+uids_found$sciname <- as.character(uids_found$sciname)
+
+# Get an api key using use_entrez with the account I created through NCBI 
+# Set api key in the environment using rentrez::set_entrez_key()
+taxize::use_entrez()
+rentrez::set_entrez_key("c6d9419d922a77ebe9e15f9a4c0e46a12108")
+
+# Search for common names using the NCBI database
+common_names <- sci2comm(uids_found$sciname, db = 'ncbi') # only found four more 
+common_found <- common_names %>% 
+  unlist() %>% 
+  as.data.frame() %>% 
+  rownames_to_column(., "sciname") %>% 
+  rename("ncbi_common" = ".")
+
+# make sure names are characters not factors 
+common_found$ncbi_common <- as.character(common_found$ncbi_common)
+
+
 ```
 
-None of the 104 remaining species had common names in taxize
+None of the 104 remaining species had common names in the taxize 'itis' database but I found four more in the 'ncbi' database
 
 Some exploration of the missing species:  
 
@@ -256,9 +281,18 @@ Looks like there are 20 genus' in the missing data, 9 of them have more than one
 
 Add common names and select final list of spp information
 ```{r finalize_spp_info}
+# add back in common names from fishbase and ncbi 
+add_common <- iucn_common_names %>%
+  left_join(common_found, by = "sciname") %>%
+  mutate(common = ifelse(is.na(common), ncbi_common, common)) %>% 
+  select(-ncbi_common) %>% 
+  left_join(out, by = "sciname") %>% 
+  mutate(common = ifelse(is.na(common), common_fb, common)) %>% 
+  select(-common_fb)
+
 iucn_spp_info <- taxa_cells_df %>%
   select(iucn_sid, sciname, population, category) %>% 
-  left_join(out, by = "sciname") %>% 
+  left_join(add_common, by = "sciname") %>% 
   distinct()
 ```
 
